{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 12,
  "lineage": "b1016aae-b096-5b66-e9c0-e21ada5aa75c",
  "resources": [
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "module.VM.provider[\"registry.terraform.io/hashicorp/aws\"].aws-uk",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:772575786712:instance/i-09a43dedcb4259dd9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a43dedcb4259dd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "DevKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d179c95297f7af9c",
            "private_dns": "ip-10-0-1-111.eu-west-2.compute.internal",
            "private_ip": "10.0.1.111",
            "public_ip": "13.40.149.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c768a8b1ec1b1a27",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1ae90924ab1ddbb",
            "tags": {
              "Name": "Jenkins"
            },
            "tags_all": {
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "5m",
              "delete": "2h"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0834b2e67f680cf3c",
              "sg-089bda860ae3c5db9"
            ]
          },
          "dependencies": [
            "module.VM.aws_security_group.allow-Jenkins",
            "module.VM.aws_security_group.allow-ssh",
            "module.VNET.aws_subnet.subnet_1",
            "module.VNET.aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "aws_instance",
      "name": "K8",
      "provider": "module.VM.provider[\"registry.terraform.io/hashicorp/aws\"].aws-uk",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:772575786712:instance/i-0b63f975abba84764",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b63f975abba84764",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "DevKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ec46a7dad6c860e6",
            "private_dns": "ip-10-0-1-158.eu-west-2.compute.internal",
            "private_ip": "10.0.1.158",
            "public_ip": "35.178.27.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03048b063188b7b51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1ae90924ab1ddbb",
            "tags": {
              "Name": "K8"
            },
            "tags_all": {
              "Name": "K8"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "5m",
              "delete": "2h"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-089bda860ae3c5db9"
            ]
          },
          "dependencies": [
            "module.VM.aws_security_group.allow-ssh",
            "module.VNET.aws_subnet.subnet_1",
            "module.VNET.aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SwarmManager",
      "provider": "module.VM.provider[\"registry.terraform.io/hashicorp/aws\"].aws-uk",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:772575786712:instance/i-09bf3ff0dc45622a8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bf3ff0dc45622a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f2d126ac1e276470",
            "private_dns": "ip-10-0-1-119.eu-west-2.compute.internal",
            "private_ip": "10.0.1.119",
            "public_ip": "18.133.228.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f66dd36e14d5161a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1ae90924ab1ddbb",
            "tags": {
              "Name": "SwarmManager"
            },
            "tags_all": {
              "Name": "SwarmManager"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "5m",
              "delete": "2h"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-089bda860ae3c5db9"
            ]
          },
          "dependencies": [
            "module.VM.aws_security_group.allow-ssh",
            "module.VNET.aws_subnet.subnet_1",
            "module.VNET.aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SwarmWorker",
      "provider": "module.VM.provider[\"registry.terraform.io/hashicorp/aws\"].aws-uk",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015a39e4b7c0966f",
            "arn": "arn:aws:ec2:eu-west-2:772575786712:instance/i-01994213c0a012175",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01994213c0a012175",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e2680e89734dbdf",
            "private_dns": "ip-10-0-1-91.eu-west-2.compute.internal",
            "private_ip": "10.0.1.91",
            "public_ip": "18.169.184.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-066273e1d31836586",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1ae90924ab1ddbb",
            "tags": {
              "Name": "SwarmWorker"
            },
            "tags_all": {
              "Name": "SwarmWorker"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "5m",
              "delete": "2h"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-089bda860ae3c5db9"
            ]
          },
          "dependencies": [
            "module.VM.aws_security_group.allow-ssh",
            "module.VNET.aws_subnet.subnet_1",
            "module.VNET.aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772575786712:security-group/sg-0834b2e67f680cf3c",
            "description": "Allow Jenkins traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0834b2e67f680cf3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connect to Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-Jenkins",
            "name_prefix": "",
            "owner_id": "772575786712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-Jenkins"
            },
            "tags_all": {
              "Name": "allow-Jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0992f3ecdf9ec7811"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VNET.aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VM",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772575786712:security-group/sg-089bda860ae3c5db9",
            "description": "Allow ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089bda860ae3c5db9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "772575786712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0992f3ecdf9ec7811"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VNET.aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VNET",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772575786712:internet-gateway/igw-0904ee7d2e9711a8b",
            "id": "igw-0904ee7d2e9711a8b",
            "owner_id": "772575786712",
            "tags": {
              "Name": "igw1"
            },
            "tags_all": {
              "Name": "igw1"
            },
            "vpc_id": "vpc-0992f3ecdf9ec7811"
          },
          "dependencies": [
            "module.VNET.aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VNET",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772575786712:route-table/rtb-09c0367dc390be9c1",
            "id": "rtb-09c0367dc390be9c1",
            "owner_id": "772575786712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0904ee7d2e9711a8b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt1"
            },
            "tags_all": {
              "Name": "rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0992f3ecdf9ec7811"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VNET.aws_internet_gateway.igw1",
            "module.VNET.aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VNET",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtsa1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9bba482253b0fb4",
            "route_table_id": "rtb-09c0367dc390be9c1",
            "subnet_id": "subnet-0d1ae90924ab1ddbb"
          },
          "dependencies": [
            "module.VNET.aws_internet_gateway.igw1",
            "module.VNET.aws_route_table.rt1",
            "module.VNET.aws_subnet.subnet_1",
            "module.VNET.aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VNET",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772575786712:subnet/subnet-0d1ae90924ab1ddbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1ae90924ab1ddbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772575786712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-subnet"
            },
            "tags_all": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-0992f3ecdf9ec7811"
          },
          "dependencies": [
            "module.VNET.aws_vpc.first-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VNET",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "first-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:772575786712:vpc/vpc-0992f3ecdf9ec7811",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01362aef6a9fef9c2",
            "default_route_table_id": "rtb-0d13c544ef7e6f6e7",
            "default_security_group_id": "sg-0598fd833f38a1931",
            "dhcp_options_id": "dopt-0554b975b5733878f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0992f3ecdf9ec7811",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d13c544ef7e6f6e7",
            "owner_id": "772575786712",
            "tags": {
              "Name": "prod-subnet"
            },
            "tags_all": {
              "Name": "prod-subnet"
            }
          }
        }
      ]
    }
  ]
}